--- a/index.html
+++ b/index.html
@@ -36,13 +36,31 @@
     <!-- BAGIKAN -->
     <!-- BAGIKAN -->
 <button class="share-btn" id="shareBtn">
-    Banyak Video 18+
+    Bagikan
 </button>
+
+<div class="share-links" id="shareLinks">
+    <button class="share-item wa" onclick="shareWhatsApp()">
+        <img src="whatsapp.png">
+        <span>WhatsApp</span>
+    </button>
+
+    <button class="share-item tg" onclick="shareTelegram()">
+        <img src="telegram.png">
+        <span>Telegram</span>
+    </button>
+
+    <button class="share-item copy" onclick="copyLink()">
+        <img src="link.png">
+        <span>Salin</span>
+    </button>
+</div>
+
+
 
 </main>
 
 <script src="main.js"></script>
 </body>
 </html>
-
 
